[package]
name = "froop"
version = "0.1.1"
authors = ["Martin Algesten <martin@algesten.se>"]
edition = "2018"
license = "MIT"
description = "A functional reactive stream library for rust"
readme = "README.md"
keywords = ["frp", "functional", "fp", "reactive", "stream"]
categories = ["data-structures"]
repository = "https://github.com/algesten/froop"

[dependencies]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "stream_benchmark"
harness = false
